fix button overflowing banner text

--- a/harmonix-client/src/pagelets-academy/1ThisIsSquad/thisissquad.css
+++ b/harmonix-client/src/pagelets-academy/1ThisIsSquad/thisissquad.css
@@ -13,9 +13,10 @@
   position: absolute;
   top: 0%;
   left: 0%;
-  margin-top: 3rem;
+  margin-top: 2rem;
   margin-left: 3rem;
   color: white;
+  z-index: 5;
 }
 .carousel-banner-copy h1 {
   font-size: 5rem;
@@ -45,6 +46,7 @@
   width: 100%;
   height: 50%;
   min-height: 400px;
+  z-index: 1;
 }
 .carousel-img {
   height: 50vh;
@@ -81,6 +83,9 @@
       rgb(0, 0, 0) 77.5%
     ),
     url('./carousel-imgs/National anthem.jpeg');
+}
+.carousel-caption-a {
+  max-height: 630px;
 }
 
 #btn-groups-artist-academy {
